--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <script src="js/raphael-min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="css/style.css" charset="utf-8">
 </head>
 <body>
+<div id="content">
   <div id="wheel">
   </div>
   <header>
@@ -55,4 +57,5 @@
       <img src="imgs/5.jpg" alt="Fifth Image"/>
     </li>
   </ul>
+</div>
 </body>
